Committing offer MVC pattern, based on scaffold method

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <strong>Name:</strong>
   <%= @place.name %>
+  <%= @place.country %>
 </p>
 
 <%= link_to 'Edit', edit_place_path(@place) %> |
