--- a/app/views/employers/index.html.erb
+++ b/app/views/employers/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Employers</h1>
+<div class="page-header">
+  <h1>Listing Employers</h1>
+</div>
 
 <table>
   <thead>
