--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+  <% flash.each do |key, message| %>
+    <div><%= message %></div>
+  <% end %>
 
+<%= yield %>
+</div>
 </body>
 </html>
