--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Offers</h1>
+<div class="page-header">
+  <h1>Listing Offers</h1>
+  <ul class="actions">
+        <li><%= link_to "New Offer", new_offer_path, class: "new" %></li>
+  </ul>
+</div>
 
 <table>
   <thead>
