--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,3 +1,15 @@
+   <div class="page-header">
+          <h1><%= @offer.name %></h1>
+          <ul class="actions">
+            <li><%= link_to "Edit Offer", edit_offer_path(@offer), class: "edit" %></li>
+            <li><%= link_to "Delete Offer", offer_path(@offer),
+               method: :delete,
+               data: { confirm: "Are you sure you want to delete this project?" },
+               class: "delete" %></li>
+          </ul>
+  </div>
+
+
 <p id="notice"><%= notice %></p>
 
 <p>
