--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,46 @@
 </head>
 <body>
 
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <%= link_to "Home", employers_path, class: "navbar-brand" %>
+        <button type="button" class="navbar-toggle collapsed"
+          data-toggle="collapse" data-target="#collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+
+
+      <div class="collapse navbar-collapse" id="collapse">
+        <ul class="nav navbar-nav">
+          <li class="<%= "active" if current_page?("/") %>">
+            <%= link_to "Offers", offers_path %>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav">
+          <li class="<%= "active" if current_page?("/") %>">
+            <%= link_to "Employers", employers_path %>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav">
+          <li class="<%= "active" if current_page?("/") %>">
+            <%= link_to "Reviews", reviews_path %>
+          </li>
+        </ul>
+      </div>
+
+
+    </div>
+  </nav>
+
+
+
 <div class="container">
   <% flash.each do |key, message| %>
     <div><%= message %></div>
