Latest changes in views and forms

--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
 
-<%= f.input :name %>
+<%= f.input :name, :input_html => {:maxlength =>30,:style=> 'width: 170px'}%>
 <%= f.input :employer %>
 <div class="field">
   <%= f.label :country %><br>
