--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+
+<div class="girl">HI</div>
+
 <div class="page-header">
   <h1>Listing Offers</h1>
   <ul class="actions">
@@ -45,7 +48,6 @@
   </tbody>
 
 </table>
-
 
 <br>
 
