--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,9 +18,22 @@
 @import "bootstrap";
 @import "font-awesome";
 
+.girl {
+  background: url(girl.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  margin-top: 110px;
+  height: 500px;
+  width: 100%;
+  position: relative;
+}
+
+
 .page-header {
           position: relative;
           padding-bottom: 0px;
+          margin-top: 132px;
           &:first-child {
             margin-top: 20px;
 }
@@ -73,19 +86,24 @@ a.delete {
 }
 
 body {
-  padding-top: 70px;
+  font-family: 'Open Sans';
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
 }
 
 tr {
     cursor: pointer;
 }
 
-// CSS CUSTOM STYLING //
+// CSS CUSTOM STYLING for NAVBAR //
 
 .navbar {
   height: 80px;
   padding-top: 18px;
   margin-bottom: 0;
+  position: fixed;
+  top: 30px;
 }
 
 .navbar-default {
@@ -102,6 +120,90 @@ tr {
   font-weight: 500;
 }
 
+.container-fluid {
+  padding-left: 0px;
+  position: relative;
+}
+
 .navbar-header {
   padding-bottom: 10px;
+}
+
+.navbar-brand {
+  padding: 0;
+  left: 25px;
+  position: relative;
+}
+
+#navbar-logo {
+display: inline-block;
+max-width: 250px;
+vertical-align: middle;
+background: #ffffff;
+}
+
+// CSS organe Topheader Styling //
+
+#top-header {
+    position: fixed;
+    background-color: #FFBD23;
+    z-index: 999999;
+    top: 0;
+    color: #000000;
+    width: 100%;
+    font-size: 12px;
+    padding-top: 7px;
+    padding-bottom: 8px;
+    display: block;
+
+}
+
+#top-header a {
+    color: rgba(0,0,0,0.5);
+
+}
+#top-header a.facebook, #top-header a.twitter {
+    margin-left: 10pt;
+}
+
+// For mobile responsive navbars //
+
+@media (max-width: 991px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+        background-color: white;
+
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in {
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
 }
