--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
 
 <div id="top-header">
-  <div class="container-fluid">
+  <div class="container">
     <a style="display:inline-block;" href="mailto:community@internsgopro.com">
       <i class="fa fa-envelope"></i> <span>community@internsgopro.com</span>
     </a>
@@ -36,7 +36,7 @@
 
 
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="http://www.internsgopro.com">
           <img id="navbar-logo" class="img-responsive" src="/logo.png" alt="internsgopro logo">
