--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,16 +18,6 @@
 @import "bootstrap";
 @import "font-awesome";
 
-.girl {
-  background: url(girl.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  margin-top: 110px;
-  height: 500px;
-  width: 100%;
-  position: relative;
-}
 
 
 .page-header {
@@ -86,8 +76,8 @@ a.delete {
 }
 
 body {
-  font-family: 'Open Sans';
-  font-weight: 500;
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-weight: 300;
   margin: 0;
   padding: 0;
 }
