--- a/app/assets/stylesheets/employers.scss
+++ b/app/assets/stylesheets/employers.scss
@@ -30,7 +30,10 @@
 }
 
 .text-info {
-  color: #999;
+  color: #f7f7f7;
+  font-size: 14px;
+  weight: 200;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 // Hover section //
@@ -181,7 +184,7 @@ ul {
 }
 
 .employer-pic {
-  background-image: url("/employer.png");
+  background-image: url("/girl.jpg");
 }
 
 .employer-pic {
