--- a/app/views/employers/show.html.erb
+++ b/app/views/employers/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<div style="margin-top: 150px;">
+
 <p>
   <strong>Name:</strong>
   <%= @employer.name %>
@@ -72,3 +74,9 @@
 
 <%= link_to 'Edit', edit_employer_path(@employer) %> |
 <%= link_to 'Back', employers_path %>
+
+
+<ul class="actions">
+  <li><%= link_to "New Offer", new_employer_offer_path(@employer),
+    class: "new" %></li>
+</ul>
