Styled sign up and sign in forms

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,6 +29,11 @@ $light_grey: #d8dcde;
 
 // - - - - -End of Variables - - - - //
 
+.margin-top {
+  margin-top: 80px;
+  position: relative; 
+}
+
 .page-header {
           position: relative;
           padding-bottom: 0px;
