--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,8 @@
 @import "bootstrap";
 @import "font-awesome";
 
+@import "admin/application";
+
 
 // - - - - -Variables - - - - //
 
@@ -29,9 +31,10 @@ $light_grey: #d8dcde;
 
 // - - - - -End of Variables - - - - //
 
+
 .margin-top {
   margin-top: 80px;
-  position: relative; 
+  position: relative;
 }
 
 .page-header {
