Authorization for Admin of create and delete functions

--- a/app/views/employers/index.html.erb
+++ b/app/views/employers/index.html.erb
@@ -47,7 +47,7 @@
 <div class="container">
 
 <div class="play">LOREM<div class="test2"></div></div>
-<%= link_to 'New Employer', new_employer_path %>
+ <%= link_to "New Employer", new_admin_employer_path, class: "new" %>
 
 <div class="page-header">
   <h1>Listing Employers</h1>
