--- a/app/views/employers/show.html.erb
+++ b/app/views/employers/show.html.erb
@@ -74,6 +74,11 @@
 
 <%= link_to 'Edit', edit_employer_path(@employer) %> |
 <%= link_to 'Back', employers_path %>
+<%= link_to "Delete Employer",
+  admin_employer_path(@employer),
+  method: :delete,
+  data: { confirm: "Are you sure you want to delete this employer?" },
+  class: "delete" %>
 
 
 <ul class="actions">
