Adding offer count per employer in employer view

--- a/app/views/employers/index.html.erb
+++ b/app/views/employers/index.html.erb
@@ -29,7 +29,7 @@
               <div class="employer-box__footer">
                 <ul class="inline-list panel-tabs">
                   <li class="bottom">
-                    <a href="/">Jobs</a>
+                    <a href="/"><%= employer.offers_count %><br>Jobs</a>
                   </li>
                   <li class="bottom">
                     <a href="/">Reviews</a>
