--- a/app/views/employers/_form.html.erb
+++ b/app/views/employers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@employer) do |f| %>
+<%= simple_form_for(@employer) do |f| %>
   <% if @employer.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@employer.errors.count, "error") %> prohibited this employer from being saved:</h2>
@@ -15,6 +15,7 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+  <%= f.input :attachment, as: :file, label: "Logo" %>
   <div class="field">
     <%= f.label :country %><br>
     <%= f.text_field :country %>
