--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -222,3 +222,11 @@ background: #ffffff;
         overflow: hidden!important;
     }
 }
+
+footer {
+    margin-top: 10px;
+    padding-top: 10px;
+    border-top: solid #FFBD23 1px;
+    background-color: #DBDBDB;
+    color: #1D0248;
+}
