--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -128,5 +128,29 @@
 
 <%= yield %>
 </div>
+
+<footer>
+<div class="container">
+<div class="row">
+<div class="col-xs-9">
+<p>
+<strong>InternsGoPro</strong> © 2014 - 2017 | All rights reserved. <a href="/pdf/internsgopro_terms-of-use.pdf">Terms of use (pdf)</a>
+</p>
+<p>
+Support and contact: <a href="mailto:community@internsgopro.com">community@internsgopro.com</a>
+</p>
+</div>
+<div class="col-xs-3">
+<div id="author">
+<p>
+<a href="http://www.internsgopro.com" target="_blank">Web application by InternsGoPro</a>
+<a href="http://www.internsgopro.com" target="_blank"><br><img src="/pdf/internsgopro_terms-of-use.png" height="42" width="250"></a>
+</p>
+</div>
+</div>
+</div>
+</div>
+</footer>
+
 </body>
 </html>
