--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,18 +1,9 @@
-<p id="notice"><%= notice %></p>
-
-
-
-</div> // closgin container div from application.css.scss
-
-<div class="row">
-  <div class="col-md-12">
-    <div class="banner">
-      <div class="banner-text">Find certified internships
-      </div>
-    </div>
-  </div>
 </div>
 
+
+<div class="employer-pic">
+Lorem ipsum sit amer
+</div>
 
 <div class="container">
 
@@ -65,12 +56,3 @@
 <br>
 
 <%= link_to 'New Offer', new_offer_path %>
-
-
-
-
-<div class="row">/* closing container */
-  <div class="col-md-12 blue">Lorem</div>
-</div>
-
-<div class="row"><div class="col-md-12"><img src="/girl2.png"  style="width:100%;"><div class="center" style="color:white;"></div></div>
