--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,6 +50,26 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+h2 {
+    text-align: center;
+    color: $orange;
+    font-size: 30px;
+    font-weight: 300;
+    line-height: 30px;
+    margin: 0;
+
+}
+
+p {
+  line-height: 23.8px;
+  text-align: center;
+  font-size: 14px;
+  color: #666666;
+  font-weight: 300;
+  padding-bottom: 30px; 
+
+}
+
 a {
   color: #666;
 }
@@ -224,7 +244,7 @@ background: #ffffff;
 }
 
 .signed-in {
-  float: right; 
+  float: right;
 }
 
 footer {
