--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,7 +93,7 @@
 
         <ul class="nav navbar-nav">
           <li class="<%= "active" if current_page?("/") %>">
-            <%= link_to "Get the label", reviews_path %>
+            <%= link_to "Get the label", pages_path %>
           </li>
         </ul>
 
