--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 </div>
 
 
-<div class="employer-pic">
+<div class="guy-dark-pic">
 Lorem ipsum sit amer
 </div>
 
@@ -14,7 +14,7 @@ Lorem ipsum sit amer
 </div>
   <div class="row">
     <div class="col-md-4">
-      <img src ="/label-page/girl.png">
+      <img src ="/label-page/girl.png" margin-bottom:"30px">
         <h2>Attract young talents & boost your employer brand</h2>
         <p>Stand out as a great employer! Your certified offers reach 100K students and young professionals through our networks of connected job sites, universities and partners.</p>
 
@@ -42,21 +42,21 @@ Lorem ipsum sit amer
   <p>Certified employers talking about their committments</p>
   <div class="col-md-4">
     <img src="/route-page/Nymann.jpg" align="center">
-    <p>“We are delighted that we have been awarded the InternsGoPro Champion level Quality Label and that we ‘practice what we preach’ and lead the way in providing internships of good quality.”</p>
-    <br>
+    <p class="margin-top">“We are delighted that we have been awarded the InternsGoPro Champion level Quality Label and that we ‘practice what we preach’ and lead the way in providing internships of good quality.”</p>
+    
     <p><strong>Johanna Nyman, President of the European Youth Forum</strong></p>
 
   </div>
   <div class="col-md-4">
     <img src="/route-page/Vaughan.jpg">
 
-    <p>“The chamber has committed to a brand new standard for quality internships with InternsGoPro. It’s part of our commitment to be a great employer, because it makes good business sense”.</p>
+    <p class="margin-top">“The chamber has committed to a brand new standard for quality internships with InternsGoPro. It’s part of our commitment to be a great employer, because it makes good business sense”.</p>
     <p><strong>Glenn Vaughan, Chief Executive British Chamber of Commerce Belgium</strong></p>
   </div>
   <div class="col-md-4">
     <img src="/route-page/Laffarge.jpg">
-    <p>“We work with InternsGoPro as we fully believe that high quality internships are essential to young people today”.</p>
-    <p><strong>Sylvie Laffarge,Director of Citizenship Europe at Microsoft Europe</strong>
+    <p class="margin-top">“We work with InternsGoPro as we fully believe that high quality internships are essential to young people today”.</p>
+    <p><br><strong>Sylvie Laffarge, Director of Citizenship Europe at Microsoft Europe</strong>
   </div>
 
   <div class="row">
