Styling of Landing page

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,6 +1,4 @@
 </div>
-
-
 <div class="employer-pic">
 Lorem ipsum sit amer
 </div>
@@ -28,41 +26,36 @@ Lorem ipsum sit amer
         <p>Write a review of your internship and get an insider’s view of the company you are interested in. The European Label for the Best Internships give you also all the information you need before applying.</p>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-12">
-      <img src ="/route-page/Logos-1.jpg">
-    </div>
-  </div>
-</div> <%# This closes div container div from application.html.erb %>
+
+      <img src ="/route-page/Logos-1.jpg" width="100%">
+  </div> <%# This closes div container div from application.html.erb %>
 
   <div class="banner-landing-page">
   </div>
 
 <div class="container">
-  <h2>InternsGoPro in the press:</h2>
-  <img src="route-page/press-logos.png">
+  <h2>InternsGoPro in the press:</h2><br>
+  <img src="route-page/press-logos.png" width="100%">
 
-  <h2>Endorsed by the European Institutions</h2>
+  <br><br><h2>Endorsed by the European Institutions</h2><br><br>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
       <img src="/route-page/Thyssen.jpg">
       <h2> Marianne Thyssen, European Commissioner for Employment</h2>
       <p>“I warmly welcome the work of InternsGoPro which complements our efforts at EU level to promote quality traineeships”</p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-6">
       <img src="/route-page/Schulz.jpg">
       <h2>Martin Schulz, Former President of the European Parliament</h2>
       <p>“Very much share spirit & objective of the International Interns Day for paid, quality, formal internships – stepping stone to full employment/further education”.</p>
     </div>
-    <div class="col-md-4">
-    </div>
+
   </div>
 </div>
 
 <div class="banner-black">
   Employers from all industries & the whole of Europe are joining us to showcase their great internships.
-  <br>Get started today
-</div>
+  <br>
 
 </div>
 <div class="container">
@@ -83,7 +76,7 @@ Lorem ipsum sit amer
   </div>
   <div class="col-md-4">
     <img src="/route-page/Laffarge.jpg">
-    <p>“We work with InternsGoPro as we fully believe that high quality internships are essential to young people today”.</p>
+    <p>“We work with InternsGoPro as we fully believe that high quality internships are essential to young people today”.</p><br>
     <p><strong>Sylvie Laffarge,Director of Citizenship Europe at Microsoft Europe</strong>
   </div>
 
