--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -65,7 +65,7 @@ h2 {
 img {
     display: block;
     margin-left: auto;
-    margin-right: auto; 
+    margin-right: auto;
 
 }
 
@@ -262,4 +262,8 @@ footer {
     border-top: solid #FFBD23 1px;
     background-color: #DBDBDB;
     color: #1D0248;
+}
+
+.margin-logo {
+  margin-bottom: 20px;
 }
