Styling label page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -43,7 +43,7 @@ Lorem ipsum sit amer
   <div class="col-md-4">
     <img src="/route-page/Nymann.jpg" align="center">
     <p class="margin-top">“We are delighted that we have been awarded the InternsGoPro Champion level Quality Label and that we ‘practice what we preach’ and lead the way in providing internships of good quality.”</p>
-    
+
     <p><strong>Johanna Nyman, President of the European Youth Forum</strong></p>
 
   </div>
@@ -61,7 +61,7 @@ Lorem ipsum sit amer
 
   <div class="row">
     <div class="col-md-12">
-      <img src ="/route-page/Logos-1.jpg">
+      <img src ="/route-page/Logos-1.jpg" width="100%">
     </div>
   </div>
 
@@ -71,7 +71,7 @@ Lorem ipsum sit amer
 
 <div class="container">
 
-  <h2>Endorsed by the European Institutions</h2>
+  <h2>Endorsed by the European Institutions</h2><br>
   <div class="row">
     <div class="col-md-6">
       <img src="/label-page/Thyssen.png">
@@ -88,8 +88,8 @@ Lorem ipsum sit amer
   </div>
 
   <div class="container">
-    <h2>InternsGoPro in the press:</h2>
-    <img src="route-page/press-logos.png">
+    <h2>InternsGoPro in the press:</h2><br>
+    <img src="route-page/press-logos.png" width="100%">
 
   </div>
 </div>
