--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,15 +3,15 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .guy-dark-pic {
-  background-image: url(/label-page/Guy-dark.jpg);
+  background-image: url(/label-page/guy_v3.png);
   position: relative;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   height: 500px;
-  margin-top: 48px;
+  margin-top: 18px;
 
-  margin-bottom: 70px;
+  margin-bottom: 0px;
 }
 
 
@@ -43,7 +43,7 @@
   -moz-background-size: cover;
   background-size: cover;
   height: 425px;
-  margin-top: 0px;
+  margin-top: 30px;
 
   margin-bottom: 70px;
 }
@@ -55,7 +55,7 @@
   -moz-background-size: cover;
   background-size: cover;
   height: 425px;
-  margin-top: 0px;
+  margin-top: 30px;
 
   margin-bottom: 70px;
 }
