--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -124,15 +124,13 @@
 <div class="row">
 <div class="col-xs-9">
 <p>
-<strong>InternsGoPro</strong> © 2014 - 2017 | All rights reserved. <a href="/pdf/internsgopro_terms-of-use.pdf">Terms of use (pdf)</a>
-</p>
-<p>
+<br><strong>InternsGoPro</strong> © 2014 - 2017 | All rights reserved. <a href="/pdf/internsgopro_terms-of-use.pdf">Terms of use (pdf)</a><br>
 Support and contact: <a href="mailto:community@internsgopro.com">community@internsgopro.com</a>
 </p>
 </div>
 <div class="col-xs-3">
 <div id="author">
-<p>
+<p class="footer">
 <a href="http://www.internsgopro.com" target="_blank">Web application by InternsGoPro</a>
 <a href="http://www.internsgopro.com" target="_blank"><br><img src="/logo.png" height="42" width="250"></a>
 </p>
